chore(theme): Add Material 3 design system theme
I also added the corresponding dependencies in the .kts, .toml and font_certs.xml files

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -75,6 +75,7 @@ fragmentKtx = "1.8.3"
 kotlinxSerializationJson = "1.6.3"
 androidxCoreKtx = "1.6.1"
 firebaseCommonKtx = "21.0.0"
+uiTextGoogleFonts = "1.7.3"
 
 [libraries]
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
@@ -146,6 +147,7 @@ play-services-auth = { module = "com.google.android.gms:play-services-auth", ver
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 test-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "androidxCoreKtx" }
+androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 
 
 [plugins]
