--- a/.github/workflows/apk-maker.yml
+++ b/.github/workflows/apk-maker.yml
@@ -15,10 +15,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # This step removes the current gradle cache to avoid any caching issues
+      - name: Remove current gradle cache
+        run: rm -rf ~/.gradle
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v4
         with:
-          java-version: 1.8
+            distribution: "temurin"
+            java-version: "17"
 
       - name: Cache Gradle packages
         uses: actions/cache@v4
