feat(event-card): improve EventCard UI layout and structure
- Refactored the EventCard component to enhance code readability and maintainability.
- Ensured consistency in layout and spacing for various UI elements.
- Improved padding and alignment for title, date, time, and location fields.
- Added background color and clipping for event type label for better visual distinction.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -81,6 +81,7 @@ androidxCoreKtx = "1.6.1"
 firebaseCommonKtx = "21.0.0"
 firebaseStorageKtx = "21.0.1"
 uiTextGoogleFonts = "1.7.3"
+volley = "1.2.1"
 
 
 [libraries]
@@ -159,6 +160,7 @@ robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectr
 test-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "androidxCoreKtx" }
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
 androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 
 
 
