feat(saved-events): implement SavedScreen for displaying user-saved events
- Created SavedScreen composable to list saved events with sections for "Today" and "Upcoming Events"
- Integrated filtering of events based on saved status and event date
- Added centered headers for "Today" and "Upcoming Events" with dynamic divider lines for each section
- Implemented FloatingActionButton for map access and BottomNavigationMenu for navigation
- Styled event lists and empty state message with consistent padding and alignment
- Utilized EventCard composable for event item display

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -85,6 +85,7 @@ firebaseStorageKtx = "21.0.1"
 uiTextGoogleFonts = "1.7.3"
 volley = "1.2.1"
 composeMaterial = "1.4.0"
+places = "4.0.0"
 
 
 [libraries]
@@ -167,6 +168,7 @@ firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage
 androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
+places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
 
 
 
