--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -87,6 +87,7 @@ firebaseCommonKtx = "21.0.0"
 firebaseStorageKtx = "21.0.1"
 uiTextGoogleFonts = "1.7.3"
 composeMaterial = "1.4.0"
+core = "1.46.0"
 
 
 [libraries]
@@ -171,6 +172,7 @@ test-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "and
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
 androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
+core = { group = "com.google.ar", name = "core", version.ref = "core" }
 
 
 
