docs: add commentary to CI.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI - Test Runner
 
 # Run the workflow when commits are pushed on main or when a PR is modified
+# Version 1.1 modified by Romain Hirschi
 on:
   push:
     branches:
