--- a/.github/workflows/firebase-ci.yaml
+++ b/.github/workflows/firebase-ci.yaml
@@ -8,10 +8,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12'
-      - name: Intsall Firebase Emulato Suite
+      - name: Install Firebase Emulator Suite
         run: npm install -g firebase-tools
       - name: Install dependencies
         run: npm install
       - name: Run tests
-        run: firebase emulatos:exec 'npm test' # need to specify that it is for the e2e test...
+        run: firebase emulators:exec 'gradle connectedCheck' # need to specify that it is for the e2e test...
 
