--- a/.github/workflows/firebase-ci.yaml
+++ b/.github/workflows/firebase-ci.yaml
@@ -1,17 +1,22 @@
-on: [push, pull_request]
+name: CI - Firebase Emulator Suite Tests
+
+on: pull_request
 jobs:
   emulator_test:
     name: Run all tests using the Firebase Emulator suite
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '12'
+          node-version: '18'
       - name: Install Firebase Emulator Suite
         run: npm install -g firebase-tools
       - name: Install dependencies
         run: npm install
+      - name: Start Firebase Emulators
+        run: firebase emulators:exec --only firestore,auth --project unio-1b8ee --import=./seed --export-on-exit=./seed &
+      - name: Wait for emulators to start
+        run: sleep 15
       - name: Run tests
-        run: firebase emulators:exec 'gradle connectedCheck' # need to specify that it is for the e2e test...
-
+        run: firebase emulators:exec 'gradle connectedCheck'
