--- a/.github/workflows/firebase-ci.yaml
+++ b/.github/workflows/firebase-ci.yaml
@@ -15,8 +15,13 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Start Firebase Emulators
-        run: firebase emulators:exec --only firestore,auth --project unio-1b8ee --import=./seed --export-on-exit=./seed &
+        run: firebase emulators:exec --only firestore,auth --project unio-1b8ee
       - name: Wait for emulators to start
         run: sleep 15
+      - name: Grant execute permission for gradlew
+        run: | 
+          chmod +x ./gradlew
+      - name: Create sh file
+        run: echo './gradlew connectedCheck' > run_tests.sh
       - name: Run tests
-        run: firebase emulators:exec 'gradle connectedCheck'
+        run: firebase emulators:exec ./run_tests.sh
