--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,9 +84,22 @@ jobs:
           echo "$GOOGLE_SERVICES" | base64 --decode > ./app/google-services.json
           echo "$LOCAL_PROPERTIES" | base64 --decode > ./local.properties
 
+      # Grant execute permission for gradlew
       - name: Grant execute permission for gradlew
         run: |
           chmod +x ./gradlew
+
+      # Install the firebase emulator suite
+      - name: Install Firebase Emulator Suite
+        with :
+          node-version: '18'
+        run: npm install -g firebase-tools
+
+      # Install dependencies for the firebase emulator suite
+      - name: Install dependencies for the firebase emulator suite
+        with:
+          node-version: '18'
+        run: npm install
 
       # Check formatting
       - name: KTFmt Check
@@ -105,6 +118,10 @@ jobs:
           # To run the CI with debug information, add --info
           ./gradlew check --parallel --build-cache
 
+      # Create shell executable for the firebase emulator
+      - name: Create sh file
+        run: echo './gradlew connectedCheck' > run_tests.sh
+
       # Run connected tests on the emulator
       - name: Run connected tests
         uses: reactivecircus/android-emulator-runner@v2
@@ -115,7 +132,7 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedCheck --parallel --build-cache
+          script: firebase emulators:exec --only firestore,auth --project unio-1b8ee ./run_tests.sh #./gradlew connectedCheck --parallel --build-cache
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
