--- a/.github/workflows/firebase-ci.yaml
+++ b/.github/workflows/firebase-ci.yaml
@@ -1,27 +1,23 @@
-name: CI - Firebase Emulator Suite Tests
+#name: CI - Firebase Emulator Suite Tests
 
-on: pull_request
-jobs:
-  emulator_test:
-    name: Run all tests using the Firebase Emulator suite
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-      - name: Install Firebase Emulator Suite
-        run: npm install -g firebase-tools
-      - name: Install dependencies
-        run: npm install
-      - name: Start Firebase Emulators
-        run: firebase emulators:exec --only firestore,auth --project unio-1b8ee
-      - name: Wait for emulators to start
-        run: sleep 15
-      - name: Grant execute permission for gradlew
-        run: | 
-          chmod +x ./gradlew
-      - name: Create sh file
-        run: echo './gradlew connectedCheck' > run_tests.sh
-      - name: Run tests
-        run: firebase emulators:exec ./run_tests.sh
+#on: pull_request
+#jobs:
+#  emulator_test:
+#    name: Run all tests using the Firebase Emulator suite
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: '18'
+#      - name: Install Firebase Emulator Suite
+#        run: npm install -g firebase-tools
+#      - name: Install dependencies
+#        run: npm install
+#      - name: Grant execute permission for gradlew
+#        run: |
+#          chmod +x ./gradlew
+#      - name: Create sh file
+#        run: echo './gradlew connectedCheck' > run_tests.sh
+#      - name: Start Firebase Emulators
+#        run: firebase emulators:exec --only firestore,auth --project unio-1b8ee ./run_tests.sh
