--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,14 +91,10 @@ jobs:
 
       # Install the firebase emulator suite
       - name: Install Firebase Emulator Suite
-        with :
-          node-version: '18'
         run: npm install -g firebase-tools
 
       # Install dependencies for the firebase emulator suite
       - name: Install dependencies for the firebase emulator suite
-        with:
-          node-version: '18'
         run: npm install
 
       # Check formatting
@@ -120,7 +116,7 @@ jobs:
 
       # Create shell executable for the firebase emulator
       - name: Create sh file
-        run: echo './gradlew connectedCheck' > run_tests.sh
+        run: echo './gradlew connectedCheck --parallel --build-cache' > run_tests.sh
 
       # Run connected tests on the emulator
       - name: Run connected tests
@@ -132,7 +128,7 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: firebase emulators:exec --only firestore,auth --project unio-1b8ee ./run_tests.sh #./gradlew connectedCheck --parallel --build-cache
+          script: firebase emulators:exec --only firestore,auth --project unio-1b8ee ./run_tests.sh
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
