--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,9 @@ accompanistPermissions = "0.36.0"
 agp = "8.4.2"
 appsearch = "1.1.0-alpha03" # Should be upgraded, but requires Android SDK 35
 coilCompose = "2.2.2"
+firebaseAuthVersion = "22.0.0"
 firebaseBom = "33.3.0"
+firebaseFirestoreVersion = "24.4.0"
 googleServices = "4.4.2"
 hiltAndroid = "2.48"
 hiltAndroidCompiler = "2.48"
@@ -28,6 +30,7 @@ materialIconsExtended = "1.7.3"
 mockitoAndroid = "5.13.0"
 mockkMockk = "1.9.3"
 mockkVersion = "1.13.8"
+playServicesAuthVersion = "20.4.1"
 robolectricVersion = "4.10.3"
 preferenceKtx = "1.2.1"
 ui = "1.7.2"
@@ -120,6 +123,8 @@ compose-activity = { group = "androidx.activity", name = "activity-compose", ver
 compose-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeViewModel" }
 compose-test-junit = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 compose-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+firebase-auth-v2200 = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuthVersion" }
+firebase-firestore-v2440 = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestoreVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
 hilt-android-compiler-v2511 = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompilerVersion" }
@@ -185,6 +190,7 @@ mockk-v1130 = { module = "io.mockk:mockk", version.ref = "mockkVersion" }
 mockk-v193 = { module = "io.mockk:mockk", version.ref = "mockkMockk" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
+play-services-auth-v2041 = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuthVersion" }
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 robolectric-v4103 = { module = "org.robolectric:robolectric", version.ref = "robolectricVersion" }
