--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -97,6 +97,7 @@ uiTextGoogleFonts = "1.7.3"
 volley = "1.2.1"
 composeMaterial = "1.4.0"
 core = "1.46.0"
+playServicesLocation = "21.3.0"
 
 
 [libraries]
@@ -194,6 +195,7 @@ androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
 core = { group = "com.google.ar", name = "core", version.ref = "core" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 
 
