--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
 
       # Create shell executable for the firebase emulator
       - name: Create shell file
-        run: echo './gradlew connectedCheck --parallel --build-cache' > run_tests.sh
+        run: echo './gradlew connectedCheck --build-cache' > run_tests.sh
 
       # Grant execute permission for shell script
       - name: Grant execute permission for shell script
@@ -133,7 +133,7 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: firebase emulators:exec --only firestore,auth --project unio-1b8ee ./run_tests.sh
+          script: firebase emulators:exec ./run_tests.sh
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
