--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,9 +84,18 @@ jobs:
           echo "$GOOGLE_SERVICES" | base64 --decode > ./app/google-services.json
           echo "$LOCAL_PROPERTIES" | base64 --decode > ./local.properties
 
+      # Grant execute permission for gradlew
       - name: Grant execute permission for gradlew
         run: |
           chmod +x ./gradlew
+
+      # Install the firebase emulator suite
+      - name: Install Firebase Emulator Suite
+        run: npm install -g firebase-tools
+
+      # Install dependencies for the firebase emulator suite
+      - name: Install dependencies for the firebase emulator suite
+        run: npm install
 
       # Check formatting
       - name: KTFmt Check
@@ -116,6 +125,18 @@ jobs:
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
           script: ./gradlew connectedCheck --parallel --build-cache
+
+      # Create shell executable for the firebase emulator
+      - name: Create shell file
+        run: echo 'npm run test' > run_rules_tests.sh
+
+      # Grant execute permission for the shell file
+      - name: Grant execute permission for the shell file
+        run: chmod +x run_rules_tests.sh
+
+      # Run JavaScript Firebase rules test
+      - name: Run Firebase rules test
+        run: firebase emulators:exec --only firestore,storage ./run_rules_tests.sh
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
