chore(firebase-emulator): Specify hostname

--- a/firebase.json
+++ b/firebase.json
@@ -8,12 +8,15 @@
   },
   "emulators": {
     "auth": {
+      "host": "127.0.0.1",
       "port": 9099
     },
     "firestore": {
+      "host": "127.0.0.1",
       "port": 8080
     },
     "storage": {
+      "host": "127.0.0.1",
       "port": 9199
     },
     "ui": {
