--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,11 +91,11 @@ jobs:
 
       # Install the firebase emulator suite
       - name: Install Firebase Emulator Suite
-        run: npm install -g firebase-tools
+        run: npm ci -g firebase-tools
 
       # Install dependencies for the firebase emulator suite
       - name: Install dependencies for the firebase emulator suite
-        run: npm install
+        run: npm ci
 
       # Check formatting
       - name: KTFmt Check
@@ -116,7 +116,7 @@ jobs:
 
       # Create shell executable for the firebase emulator
       - name: Create shell file
-        run: echo './gradlew connectedCheck --build-cache --info' > run_tests.sh
+        run: echo './gradlew connectedCheck --build-cache' > run_tests.sh
 
       # Grant execute permission for shell script
       - name: Grant execute permission for shell script
