--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,29 @@ jobs:
         run: |
           ./gradlew ktfmtCheck
 
+# NEW PART:
+      # Install the firebase emulator suite
+      - name: Install Firebase Emulator Suite
+        run: npm install -g firebase-tools
+
+      # Install project dependencies for Firebase Emulator
+      - name: Install Firebase Emulator dependencies
+        run: npm install
+
+      # Start Firebase Emulator Suite in the background
+      - name: Start Firebase Emulator Suite
+        run: firebase emulators:start --only firestore,storage --project demo &
+
+      - name: Create shell file for Node tests
+        run: echo 'npm run test' > run_node_tests.sh
+
+      - name: Grant execute permission for the Node test shell file
+        run: chmod +x run_node_tests.sh
+
+      - name: Run Node tests with Firestore and Storage emulators
+        run: firebase emulators:exec --only firestore,storage ./run_node_tests.sh
+# END OF NEW PART
+
       # This step runs gradle commands to build the application
       - name: Assemble
         run: |
