chore(CI): add shell script for connected tests with emulator

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,20 +94,28 @@ jobs:
           ./gradlew ktfmtCheck
 
 # NEW PART:
+      # Grant execute permission for gradlew
+      - name: Grant execute permission for gradlew
+        run: |
+          chmod +x ./gradlew
+
       # Install the firebase emulator suite
       - name: Install Firebase Emulator Suite
         run: npm install -g firebase-tools
 
-      # Install project dependencies for Firebase Emulator
-      - name: Install Firebase Emulator dependencies
+      # Install dependencies for the firebase emulator suite
+      - name: Install dependencies for the firebase emulator suite
         run: npm install
 
-      - name: Create shell file for Node tests
+      # Create shell script for Node tests
+      - name: Create shell file
         run: echo 'npm run test' > run_node_tests.sh
 
-      - name: Grant execute permission for the Node test shell file
+      # Grant execute permissions for the shell file
+      - name: Grant execute permission for the shell file
         run: chmod +x run_node_tests.sh
 
+      # Run
       - name: Run Node tests with Firestore and Storage emulators
         run: firebase emulators:exec --only firestore,storage ./run_node_tests.sh
 # END OF NEW PART
@@ -124,6 +132,17 @@ jobs:
           # To run the CI with debug information, add --info
           ./gradlew check --parallel --build-cache
 
+# NEW Part
+      # Create shell script for connected tests
+      - name: Create shell file
+        run: echo './gradlew connectedCheck --parallel --build-cache' > run_tests.sh
+
+      # Grant execute permissions for shell script
+      - name: Grant execute permission for shell script
+        run: |
+          chmod +x ./run_tests.sh
+# END OF NEW PART
+
       # Run connected tests on the emulator
       - name: Run connected tests
         uses: reactivecircus/android-emulator-runner@v2
@@ -134,7 +153,7 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedCheck --parallel --build-cache
+          script: firebase emulators:exec ./run_tests.sh
 
       # This step generates the coverage report which will be uploaded to sonar
       - name: Generate Coverage Report
