chore(CI): correct jacocoTestReport path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: jacocoTestReport
-          path: reports/jacoco/
+          path: build/reports/jacoco/jacocoTestReport/
 
 
       # Upload the various reports to sonar
