CI(permissions-&-access-rights): update CI to load functions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,13 @@ jobs:
       - name: Install dependencies for the firebase emulator suite
         run: npm install
 
+      # Navigate to the `functions` directory, install dependencies, then return to root
+      - name: Install dependencies for the Firebase Emulator Suite
+        run: |
+          cd functions
+          npm install
+          cd -
+
       # Check formatting
       - name: KTFmt Check
         run: |
